# ms2hf

./: README.md  ms2hf.py  pyproject.toml
.github/workflows/: publish-pypi.yml  sync.yml
